css/my.css
body{padding: 56px 0px 0px 0px;
}
.navbar-brand{
	background-image: url('/img/logo-s.png');
	background-repeat: no-repeat;
	padding: 0px 0px 0px 90px;
	margin: 3px 0px 0px 3px;
}
.navbar-nav>.acmenu {
	background-color:#CCCCCC;
	border-radius:7px;
	-moz-border-radius:7px;
	-webkit-border-radius:7px;
}
h1,h2,h3,h4 {
	font-family: 'Oswald', sans-serif;
}
header {
    color: #fff;
    background-attachment: scroll;
    background-image: url(../img/header.jpg);
    background-position: center center;
    background-repeat: none;
    padding: 10px;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}
.panel-heading a:after {
    font-family:'Glyphicons Halflings';
    content:"\e114";
    float: right;
    color: grey;
}
.panel-heading a.collapsed:after {
    content:"\e080";
}

